Spacing like it should!

--- a/Galaxy.html
+++ b/Galaxy.html
@@ -104,9 +104,9 @@
 <!-- Work Content
 ================================================== -->
 
-<section  data-midnight="dark" class="galaxy-bg-purple">
-<div class="container project-detail">  
-<div class="row lightbox-gallery">  
+
+<div data-midnight="dark" class="container project-detail galaxy-bg-purple padtop_120">  
+<div class="row lightbox-gallery galaxy-bg-purple">  
 
   <div class="col-lg-4 col-md-12 col-sm-12 cl-xs-12">
     <h2 class="title white-text">Why Agent J got the small gun?</h2>
@@ -118,9 +118,7 @@
   </div>
 </div>
 </div>
-
-</div>  
-  </section>
+ 
   <section data-midnight="dark" class="galaxy-bg-purple-gradient">
     <div class="container project-detail">
       <h2 class="title white-text text-center bottom_120">How would one fix the MIB’s user experience?</h2>
