--- a/index.html
+++ b/index.html
@@ -86,31 +86,30 @@
 
 <!-- PORTFOLIO SECTION
 ================================================== --> 
-<section  id="portfolio" class="lightbox-gallery dark-bg" data-midnight="dark">
-<div class="container">    
-      <div class="row">
+<div id="portfolio" class="dark-bg container padtop_90" data-midnight="dark">    
+      <div class="row lightbox-gallery">
         <div class="col-lg-8">           
-              <div class="image photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
+              <div class="image wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
                         <a href="Library-of-Congress.html">
-                          <img class="round-corners bottom_45" src="img/works/work-7/LOC-Cover-IMG.png" alt="Library of Congress">
+                          <img class="round-corners bottom_60" src="img/works/work-7/LOC-Cover-IMG.png" alt="Library of Congress">
                         </a> 
               </div>
         </div>
         <div class="col-lg-4">
-              <div class="image photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
+              <div class="image wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
                         <a href="USA-Today.html">
-                              <img class="round-corners bottom_45" src="img/works/work-1/work-1-Thumb-7.png" alt="USA Today Brand Refresh">
+                              <img class="round-corners bottom_60" src="img/works/work-1/work-1-Thumb-7.png" alt="USA Today Brand Refresh">
                         </a>
               </div>
         </div>    
       </div>
 
-      <div class="row">
+      <div class="row lightbox-gallery">
           
         <div class="col-lg-4">
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
               <a href="Racing-Extinction.html">
-                      <img class="round-corners bottom_45" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" alt="">
+                      <img class="round-corners bottom_60" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" alt="">
                   </a>
         </div>
 
@@ -118,12 +117,12 @@
         <div class="col-lg-4">
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
                       <a href="Gallo-Guapo.html">
-                            <img class="round-corners bottom_45"src="img/works/work-5/Work-5-thumb-3.png" alt="">
+                            <img class="round-corners bottom_60"src="img/works/work-5/Work-5-thumb-3.png" alt="">
                       </a>
         </div>
         <div class="image photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
                       <a href="Storytelling-Bootcamp.html">
-                              <img class="round-corners"src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
+                              <img class="round-corners bottom_60"src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
                       </a>
         </div>
         </div>
@@ -131,13 +130,13 @@
         <div class="col-lg-4">
               <div class="image  photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
                             <a href="Galaxy.html">
-                                  <img class="round-corners bottom_45" src="img/works/Galaxy/Galaxy-Thumb.png" alt="">
+                                  <img class="round-corners bottom_60" src="img/works/Galaxy/Galaxy-Thumb.png" alt="">
                             </a>
               </div>
         <div class="image  photography wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
             <figure class="js-tilt"> 
                             <a href="Biodiversity-Festival.html">
-                                    <img class="round-corners bottom_45" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif" alt="Bat Flying Animation">
+                                    <img class="round-corners bottom_60" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif" alt="Bat Flying Animation">
                             </a>
             </figure>
         </div>
@@ -157,12 +156,11 @@
                 --- a work -->
         </div>
 </div>
-</section>
 
 <!-- ABOUT SECTION
 ================================================== -->
-<section id="about" data-midnight="dark" class="dark-bg">
-  <div class="container project-detail">
+
+  <div id="about" class="container project-detail dark-bg padtop_30" data-midnight="dark">
           <div class="row lightbox-gallery">
             <div class="col-lg-4">
               <h2 class="white-text subtitle bottom_30">About</h2>
@@ -173,17 +171,16 @@
               </div>
 
           </div>
-      </div>
-</section>
+  </div>
+
 
 
 <!-- CLIENT SECTION
 ================================================== -->
-<section id="clients" data-midnight="dark" class="dark-bg">
-      <div class="container project-detail">
+      <div id="clients" data-midnight="dark" class="container project-detail dark-bg padtop_90">
           <div class="row lightbox-gallery">
             <div class="col-lg-4 col-md-4 col-sm-12">
-              <h2 class="white-text subtitle">Past Patrons</h2>
+              <h2 class="white-text subtitle bottom_45">Past Patrons</h2>
           </div>
               <div class="col-lg-8">
                 <div class="row wow fadeInUp" data-wow-delay="0.1s">
@@ -215,7 +212,6 @@
               </div>
           </div>
       </div>
-</section>
 
 <!-- CONTACT SECTION
 ================================================== -->
