--- a/Biodiversity-Festival.html
+++ b/Biodiversity-Festival.html
@@ -233,25 +233,33 @@
 </div>
 </section>
 
-<footer data-midnight="dark">
-  <div class="container text-center">
-    <div class="row">  
-      <div class="social-icons col-lg-8 offset-lg-2 bottom_45">
-          <div class="top_15 bottom_45">
-              <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i>  </a>
-              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
-              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
-              &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
+<!-- footer -->
+<section id="contact" data-midnight="dark" class="dark-bg">
+  <div class="container project-detail wow padtop_30">
+          <div class="row lightbox-gallery">
+              <div class="col-lg-4">
+                  <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
+              </div>
+
+              <div class="col-lg-2 bottom_30"> 
+                <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a>
+              </div>
+              <div class="col-lg-2 bottom_30"> 
+                    <a href="tel:+1571-295-1415">+1 571 295 1415</a>
+              </div>
+              <div class="col-lg-2 bottom_30">
+                <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i>  </a>
+                &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
+                &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
+                &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
+            </div>
+            <div class="col-lg-2 bottom_30">
+              <p class="copyright">© Peter Verastegui</p>
+            </div>
+              </div>
           </div>
-        </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <p class="copyright">© Edwin Peter Verastegui Guasace</p>
       </div>
-    </div>
-  </div>
-</footer>
+</section>
 
 </main>
 
