--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a href="#clients">Clients</a>
                 </li>
                 <li class="scroll">
-                    <a href="#contact">Contact</a>
+                    <a href="#contact">Contact Info.</a>
                 </li>
             </ul>                 
         </div>
@@ -215,26 +215,29 @@
 
 <!-- CONTACT SECTION
 ================================================== -->
-<section id="contact" data-midnight="dark" class="dark-bg padding_90">
-  <div class="container project-detail bottom_60">
+<!-- footer -->
+<section id="contact" data-midnight="dark" class="dark-bg">
+  <div class="container project-detail wow fadeInUp padtop_30" data-wow-delay="0.6s">
           <div class="row lightbox-gallery">
               <div class="col-lg-4">
-                  <h2 class="white-text subtitle bottom_30">Contact</h2>
+                  <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
               </div>
-              <div class="col-lg-8  wow fadeInUp" data-wow-delay="0.6s">
-                <ul style="list-style-type:none;">
-                <li class="bottom_30"><div>
-                  <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i>  </a>
-                  &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
-                  &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
-                  &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
+
+              <div class="col-lg-2 bottom_30"> 
+                <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a>
               </div>
-            </li>
-
-                    <li class="bottom_30"> <a href="mailto:peter_veras@live.com?Subject=Hello" target="_blank">peter_veras@live.com</a></li>
-
-                    <li class="bottom_30"><a href="tel:+1571-295-1415">+1 571 295 1415</a></li>
-                  </ul>
+              <div class="col-lg-2 bottom_30"> 
+                    <a href="tel:+1571-295-1415">+1 571 295 1415</a>
+              </div>
+              <div class="col-lg-2 bottom_30">
+                <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i>  </a>
+                &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
+                &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
+                &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
+            </div>
+            <div class="col-lg-2 bottom_30">
+              <p class="copyright">© Peter Verastegui</p>
+            </div>
               </div>
           </div>
       </div>
