--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <!-- PORTFOLIO SECTION
 ================================================== --> 
-<div id="portfolio" class="dark-bg container padtop_90" data-midnight="dark">    
+<div id="portfolio" class="dark-bg container padtop_90" data-midnight="dark">  
       <div class="row lightbox-gallery">
         <div class="col-lg-8">           
               <div class="image wow fadeInUp" data-wow-delay="0.2s"  data-type="ajax-load">
@@ -217,7 +217,7 @@
 ================================================== -->
 <!-- footer -->
 <section id="contact" data-midnight="dark" class="dark-bg">
-  <div class="container project-detail wow fadeInUp padtop_30" data-wow-delay="0.6s">
+  <div class="container project-detail padtop_30">
           <div class="row lightbox-gallery">
               <div class="col-lg-4">
                   <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
