--- a/Galaxy.html
+++ b/Galaxy.html
@@ -106,7 +106,7 @@
 
 
 <div data-midnight="dark" class="container project-detail galaxy-bg-purple padtop_120">  
-<div class="row lightbox-gallery galaxy-bg-purple">  
+<div class="row lightbox-gallery">  
 
   <div class="col-lg-4 col-md-12 col-sm-12 cl-xs-12">
     <h2 class="title white-text">Why Agent J got the small gun?</h2>
