--- a/index.html
+++ b/index.html
@@ -100,14 +100,15 @@
         <div class="col-lg-8">
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Library-of-Congress.html">
-              <img class="round-corners bottom_60" src="img/works/work-7/LOC-Cover-IMG.png" alt="Library of Congress">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-7/LOC-Cover-IMG.png"
+                alt="Library of Congress">
             </a>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="USA-Today.html">
-              <img class="round-corners bottom_60" src="img/works/work-1/work-1-Thumb-7.png"
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
                 alt="USA Today Brand Refresh">
             </a>
           </div>
@@ -119,7 +120,8 @@
         <div class="col-lg-4">
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Racing-Extinction.html">
-              <img class="round-corners bottom_60" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" alt="">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
+                alt="">
             </a>
           </div>
 
@@ -127,13 +129,13 @@
         <div class="col-lg-4">
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Gallo-Guapo.html">
-              <img class="round-corners bottom_60" src="img/works/work-5/Work-5-thumb-3.png" alt="">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-5/Work-5-thumb-3.png" alt="">
             </a>
           </div>
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Storytelling-Bootcamp.html">
-              <img class="round-corners bottom_60" src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png"
-                alt="Woman diving photo by Dave McAloney">
+              <img class="round-corners bottom_60 plus-cursor"
+                src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
             </a>
           </div>
         </div>
@@ -141,19 +143,20 @@
         <div class="col-lg-4">
           <div class="image  photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Galaxy.html">
-              <img class="round-corners bottom_60" src="img/works/Galaxy/Galaxy-Thumb.png" alt="">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/Galaxy-Thumb.png" alt="">
             </a>
           </div>
           <div class="image  photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Biodiversity-Festival.html">
-              <img class="round-corners bottom_60" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
                 alt="Bat Flying Animation">
             </a>
           </div>
 
           <div class="image  photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Creating-Change.html">
-              <img class="round-corners bottom_60" src="img/works/work-8/Creating-Change-2.png" alt="Creating Change">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-8/Creating-Change-2.png"
+                alt="Creating Change">
             </a>
           </div>
         </div>
