--- a/index.html
+++ b/index.html
@@ -106,46 +106,26 @@
           </div>
         </div>
         <div class="col-lg-4">
+          <div class="image  photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="Galaxy.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/Galaxy-Thumb-2.png" alt="">
+            </a>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="row lightbox-gallery">
+
+
+        <div class="col-lg-4">
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="USA-Today.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
                 alt="USA Today Brand Refresh">
             </a>
           </div>
-        </div>
-      </div>
 
-      <div class="row lightbox-gallery">
-
-        <div class="col-lg-4">
-          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Racing-Extinction.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
-                alt="">
-            </a>
-          </div>
-
-        </div>
-        <div class="col-lg-4">
-          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Gallo-Guapo.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-5/Work-5-thumb-3.png" alt="">
-            </a>
-          </div>
-          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Storytelling-Bootcamp.html">
-              <img class="round-corners bottom_60 plus-cursor"
-                src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
-            </a>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="image  photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Galaxy.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/Galaxy-Thumb.png" alt="">
-            </a>
-          </div>
           <div class="image  photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Biodiversity-Festival.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
@@ -153,10 +133,49 @@
             </a>
           </div>
 
+        </div>
+
+
+
+        <div class="col-lg-4">
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="Gallo-Guapo.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-5/Gallo-Guapo-Thumb-Nail-2.png"
+                alt="">
+            </a>
+          </div>
           <div class="image  photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Creating-Change.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-8/Creating-Change-2.png"
                 alt="Creating Change">
+            </a>
+          </div>
+
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="Storytelling-Bootcamp.html">
+              <img class="round-corners bottom_60 plus-cursor"
+                src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
+            </a>
+          </div>
+
+
+        </div>
+
+
+
+        <div class="col-lg-4">
+
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="UI-UX-Illustrations.html">
+              <img class="round-corners bottom_60 plus-cursor"
+                src="img/works/UI-UX-Illustration/UI-UX-Illustrations-Thumbnail.png" alt="UI/UI Illustration">
+            </a>
+          </div>
+
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="Racing-Extinction.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
+                alt="">
             </a>
           </div>
         </div>
