--- a/Creating-Change.html
+++ b/Creating-Change.html
@@ -113,9 +113,9 @@
 
     <!-- ================= Work Intro / Credits - Start ============================ -->
 
-    <section data-midnight="dark" class="dark-bg">
+    <section data-midnight="white" class="white-bg">
       <div class="container project-detail">
-        <div class="row lightbox-gallery white-text">
+        <div class="row lightbox-gallery text">
           <div class="col-lg-8">
             <h2 class="title bottom_30">Creating Change</h2>
             <p>Creating Change is a pro bono initiative from Discovery Communications. This Program harnesses the
@@ -139,21 +139,21 @@
     <!-- ================= Work Intro / Credits - End ============================ -->
 
     <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="dark">
+    <div data-midnight="white">
       <img class="img-fluid" src="img/works/work-8/PEOPLE-CC2015.jpg" alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
 
     <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="dark" class="dark-bg">
+    <div data-midnight="white" class="white-bg">
       <img class="img-fluid padding_30" src="img/works/work-8/Pin-CC2015.jpg" alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
 
     <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white">
+    <div data-midnight="dark">
       <img class="img-fluid" src="img/works/work-8/Speaker.jpg" alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
@@ -161,7 +161,7 @@
 
     <!--======= 3 Images - Without Padding ======= -->
 
-    <div data-midnight="dark" class="row dark-bg">
+    <div data-midnight="white" class="row white-bg">
       <div class="col-lg-6">
         <img class="image img-fluid bottom_30 top_30" src="img/works/work-8/CLose-up-of-logo.png" alt="Logo">
       </div>
@@ -183,14 +183,14 @@
 
 
     <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white" class="dark-bg">
+    <div data-midnight="white" class="white-bg">
       <img class="img-fluid" src="img/works/work-8/ANIMATION-CREATING-CHANGE.gif" alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
 
     <!-- ======= 3 Images - Without Padding ======= Start-->
-    <div data-midnight="dark" class="row lightbox-gallery padtop_30 dark-bg">
+    <div data-midnight="dark" class="row lightbox-gallery padtop_30 white-bg">
       <div class="col-lg-4">
         <div class="image bottom_30">
           <img src="img/works/work-8/meeting-room.png" alt="Stand">
@@ -209,7 +209,7 @@
     </div>
     <!-- ======= 3 Images - Without Padding ======= End-->
 
-    <div data-midnight="dark" class="row dark-bg">
+    <div data-midnight="white" class="row white-bg">
       <div class="col-lg-6">
         <img class="image img-fluid bottom_30" src="img/works/work-8/Hoddies.jpg" alt="Logo">
       </div>
