--- a/index.html
+++ b/index.html
@@ -97,13 +97,12 @@
 ================================================== -->
     <div id="portfolio" class="dark-bg container padtop_90" data-midnight="dark">
       <div class="row lightbox-gallery">
-        <div class="col-lg-8">
-          <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Library-of-Congress.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-7/LOC-Cover-IMG.png"
-                alt="Library of Congress">
-            </a>
-          </div>
+        <div class="col-lg-8 bottom_60 wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe class="round-corners"
+              src="https://player.vimeo.com/video/246916040?color=ff0179&title=0&byline=0&portrait=0"
+              style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
+              allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+          <script src="https://player.vimeo.com/api/player.js"></script>
         </div>
         <div class="col-lg-4">
           <div class="image  photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
@@ -111,7 +110,12 @@
               <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/Galaxy-Thumb-2.png" alt="">
             </a>
           </div>
-
+          <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="Library-of-Congress.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-7/LOC-Cover-IMG.png"
+                alt="Library of Congress">
+            </a>
+          </div>
         </div>
       </div>
 
@@ -134,8 +138,6 @@
           </div>
 
         </div>
-
-
 
         <div class="col-lg-4">
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
@@ -160,8 +162,6 @@
 
 
         </div>
-
-
 
         <div class="col-lg-4">
 
