--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Peter Verastegui's Portofolio">
   <meta name="keywords" content="personal, portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Peter Verastegui's Portfolio" />
+  <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
   <!-- Stylesheets -->
