--- a/Gallo-Guapo.html
+++ b/Gallo-Guapo.html
@@ -92,10 +92,10 @@
               <a href="index.html#about">About</a>
             </li>
             <li class="scroll">
-              <a href="index.html#clients">Clients</a>
+              <a href="index.html#resume">Resume</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact</a>
+              <a href="index.html#contact">Contact Information</a>
             </li>
           </ul>
         </div>
