--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <link rel="stylesheet" href="css/style.css" />
 
   <!--[if lt IE 9]>
-  	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  	<![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-  <!-- FAVICON  -->
+  <!-- FAVICON -->
   <link rel="shortcut icon" href="img/favico.ico">
 
   <!-- Font icons -->
@@ -32,7 +32,6 @@
 </head>
 
 <body>
-
   <!-- Preloader -->
   <div id="preloader">
     <svg width="60px" height="60px" viewBox="0 0 100 100">
@@ -44,7 +43,6 @@
       </path>
     </svg>
   </div>
-
   <main>
 
 
@@ -73,10 +71,10 @@
               <a href="#about">About</a>
             </li>
             <li class="scroll">
-              <a href="#clients">Clients</a>
+              <a href="#resume">Resume</a>
             </li>
             <li class="scroll">
-              <a href="#contact">Contact Info.</a>
+              <a href="#contact">Contact Information</a>
             </li>
           </ul>
         </div>
@@ -107,7 +105,7 @@
           <script src="https://player.vimeo.com/api/player.js"></script>
         </div>
         <div class="col-lg-4">
-          <div class="image  photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Galaxy.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/Galaxy/Galaxy-Thumb-2.png" alt="">
             </a>
@@ -132,26 +130,38 @@
             </a>
           </div>
 
-          <div class="image  photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Biodiversity-Festival.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
-                alt="Bat Flying Animation">
-            </a>
-          </div>
-
-        </div>
-
-        <div class="col-lg-4">
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Gallo-Guapo.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-5/Gallo-Guapo-Thumb-Nail-2.png"
                 alt="">
             </a>
           </div>
-          <div class="image  photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="Biodiversity-Festival.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
+                alt="Bat Flying Animation">
+            </a>
+          </div>
+
+
+
+
+        </div>
+
+        <div class="col-lg-4">
+
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Creating-Change.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-8/Creating-Change-2.png"
                 alt="Creating Change">
+            </a>
+          </div>
+
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="UI-UX-Illustrations.html">
+              <img class="round-corners bottom_60 plus-cursor"
+                src="img/works/UI-UX-Illustration/UI-UX-Illustrations-Thumbnail.png" alt="UI/UI Illustration">
             </a>
           </div>
 
@@ -167,12 +177,7 @@
 
         <div class="col-lg-4">
 
-          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="UI-UX-Illustrations.html">
-              <img class="round-corners bottom_60 plus-cursor"
-                src="img/works/UI-UX-Illustration/UI-UX-Illustrations-Thumbnail.png" alt="UI/UI Illustration">
-            </a>
-          </div>
+
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Racing-Extinction.html">
@@ -180,91 +185,174 @@
                 alt="">
             </a>
           </div>
+
+
+
         </div>
-        <!-- a work 
-                    <a href="work-4.html" class="col-lg-4 col-sm-6 grid-item branding wow fadeInUp" data-wow-delay="1.2s"  data-type="ajax-load">
-                      <figure class="portfolio-item js-tilt"> 
-                        <figcaption>
-                            <span> Branding </span>
-                            <h3 class="title">Outdoors Baseball</h3>
-                        </figcaption>             
-                        <div class="image round-corners" style="background-image: url(img/work-4.jpg);">     
-                            <img src="img/work-4.jpg" style="visibility: hidden;" />
-                        </div>
-                      </figure>
-                    </a> 
-                --- a work -->
+        <!-- a work
+<a href="work-4.html" class="col-lg-4 col-sm-6 grid-item branding wow fadeInUp" data-wow-delay="1.2s" data-type="ajax-load">
+<figure class="portfolio-item js-tilt">
+<figcaption>
+<span> Branding </span>
+<h3 class="title">Outdoors Baseball</h3>
+</figcaption>
+<div class="image round-corners" style="background-image: url(img/work-4.jpg);">
+<img src="img/work-4.jpg" style="visibility: hidden;" />
+</div>
+</figure>
+</a>
+--- a work -->
       </div>
     </div>
 
-    <!-- ABOUT SECTION
-================================================== -->
+    <!--  ================== ABOUT SECTION ===================== -->
 
-    <div id="about" class="container project-detail dark-bg padtop_30" data-midnight="dark">
+    <div id="about" class="container project-detail dark-bg padtop_90" data-midnight="dark">
       <div class="row lightbox-gallery">
+
         <div class="col-lg-4">
           <h2 class="white-text subtitle bottom_30">About</h2>
-          <p>I am an artist. Hence the goatee. Hope you understand my work. I use images, typography, photos, colors,
+        </div>
+
+        <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
+          <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
+          <p class="padtop_30">I am an artist. Hence the goatee. Hope you understand my work. I use images,
+            typography,
+            photos, colors,
             words, that kind of stuff in my work. To learn more about me visit my <a
               href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank">blog</a></li>
             &nbsp;<a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
                 class="fas fa-external-link-square-alt" aria-hidden="true"></i> </a></p>
         </div>
-        <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-          <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
-        </div>
 
       </div>
     </div>
 
 
-
-    <!-- CLIENT SECTION
-================================================== -->
-    <div id="clients" data-midnight="dark" class="container project-detail dark-bg padtop_90">
+    <!-- CLIENT RESUME
+  ================================================== -->
+    <div id="resume" data-midnight="dark" class="container project-detail dark-bg padtop_90">
       <div class="row lightbox-gallery">
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <h2 class="white-text subtitle bottom_45">Past Patrons</h2>
+
+        <div class="col-lg-4 col-md-12 col-sm-12">
+          <h2 class="white-text subtitle">Resume</h2>
         </div>
-        <div class="col-lg-8">
-          <div class="row wow fadeInUp" data-wow-delay="0.1s">
-            <div class="col-lg-3 col-md-3 col-sm-3 client">
-              <img src="img/clients/National Geographic.svg" alt="National Geographic">
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3 client">
-              <img src="img/clients/PBS New Hour.svg" alt="PBS New Hour">
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3 client">
-              <img src="img/clients/USA Today.svg" alt="USA Today">
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3 client">
-              <img src="img/clients/Discovery.svg" alt="Discovery">
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3  client">
-              <img src="img/clients/FINRA.svg" alt="FINRA">
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3  client">
-              <img src="img/clients/Investigation Discovery.svg" alt="Investigation Discovery">
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3  client">
-              <img src="img/clients/Science Channel.svg" alt="Science Chanell">
-            </div>
-            <div class="col-lg-3 col-md-3 col-sm-3  client">
-              <img src="img/clients/Animal Planet.svg" alt="Animal Planet">
-            </div>
-          </div>
+
+        <div class="col-lg-8 col-md-12 col-sm-12 padbot_30">
+          <h3 class="grey-text">Experience</h3>
         </div>
       </div>
+
+
+      <div class="row lightbox-gallery">
+
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">FINRA</h3>
+          <p class="padbot_30">UI/UX Designer<br> Feb 2019 – Present<br> Rockville, MD</p>
+
+
+        </div>
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">Subject Matter</h3>
+          <p class="padbot_30">UI/UX Designer<br> Jan 2018 – Feb 2019<br> Washington, DC</p>
+
+
+        </div>
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">PBS NewsHour</h3>
+          <p class="padbot_30">Motion Designer<br> Nov 2017 – Jan 2018<br> Arlington, VA</p>
+
+
+        </div>
+
+
+      </div>
+
+
+      <div class="row lightbox-gallery padbot_30">
+
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">USA Today</h3>
+          <p class="padbot_30">Graphic Designer<br> Apr 2017 – Jul 2017<br> Mclean, VA</p>
+
+
+        </div>
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">National Geographic</h3>
+          <p class="padbot_30">Graphic Designer<br> Apr 2016 – Apr 2017<br> Washington, DC</p>
+
+
+        </div>
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">Discovery</h3>
+          <p class="padbot_30">Graphic Designer<br> Jan 2015 – Jan 2016<br> Silver Spring, MD</p>
+
+
+        </div>
+
+
+      </div>
+
+
+      <div class="row lightbox-gallery">
+
+        <div class="col-lg-4 col-md-12 col-sm-12">
+        </div>
+
+        <div class="col-lg-8 col-md-12 col-sm-12 padbot_30">
+          <h3 class="grey-text">Education</h3>
+        </div>
+      </div>
+
+
+      <div class="row lightbox-gallery">
+
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+
+        <div class="col-lg-8">
+
+
+          <h3 class="white-text bottom_15">Corcoran College of Art + Design</h3>
+          <p>Bachelor of Fine Art & Graphic Design<br> 2010 - 2014</p>
+
+
+        </div>
+
+
+      </div>
+
+
     </div>
 
-    <!-- CONTACT SECTION
-================================================== -->
     <!-- footer -->
     <section id="contact" data-midnight="dark" class="dark-bg">
-      <div class="container project-detail padtop_30">
+      <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
+
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contac Info.</h2>
+            <h2 class="white-text subtitle bottom_30">Contac Information</h2>
           </div>
 
           <div class="col-lg-2 bottom_30">
@@ -285,6 +373,7 @@
           <div class="col-lg-2 bottom_30">
             <p class="copyright">© Peter Verastegui</p>
           </div>
+
         </div>
       </div>
       </div>
