--- a/index.html
+++ b/index.html
@@ -216,11 +216,12 @@
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
-          <p class="padtop_30">I am an artist. Hence the goatee. Hope you understand my work. I use images,
-            typography,
-            photos, colors,
-            words, that kind of stuff in my work. To learn more about me visit my <a
-              href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank">blog</a></li>
+          <p class="padtop_60">Hello, my name is Peter. I am Interaction designer that started his career as a curious
+            student in art school. That curiosity took me from Graphics to Motion to Interaction. Now, in hindsight,
+            I've realized that no matter what hat I wore I found myself crafting experiences–and stories in one way or
+            another. To learn more about that journey check out my <a href="https://peterverastegui.wordpress.com/"
+              rel="noopener noreferrer" target="_blank">blog</a>
+            </li>
             &nbsp;<a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
                 class="fas fa-external-link-square-alt" aria-hidden="true"></i> </a></p>
         </div>
@@ -254,7 +255,7 @@
 
 
           <h3 class="white-text bottom_15">FINRA</h3>
-          <p class="padbot_30">UI/UX Designer<br> Feb 2019 – Present<br> Rockville, MD</p>
+          <p class="padbot_30">Interaction Designer,<br> Feb 2019 – Present,<br> Rockville, MD</p>
 
 
         </div>
@@ -262,7 +263,7 @@
 
 
           <h3 class="white-text bottom_15">Subject Matter</h3>
-          <p class="padbot_30">UI/UX Designer<br> Jan 2018 – Feb 2019<br> Washington, DC</p>
+          <p class="padbot_30">Interaction Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC</p>
 
 
         </div>
@@ -270,7 +271,7 @@
 
 
           <h3 class="white-text bottom_15">PBS NewsHour</h3>
-          <p class="padbot_30">Motion Designer<br> Nov 2017 – Jan 2018<br> Arlington, VA</p>
+          <p class="padbot_30">Motion Designer,<br> Nov 2017 – Jan 2018,<br> Arlington, VA</p>
 
 
         </div>
@@ -289,7 +290,7 @@
 
 
           <h3 class="white-text bottom_15">USA Today</h3>
-          <p class="padbot_30">Graphic Designer<br> Apr 2017 – Jul 2017<br> Mclean, VA</p>
+          <p class="padbot_30">Graphic Designer,<br> Apr 2017 – Jul 2017,<br> Mclean, VA</p>
 
 
         </div>
@@ -297,7 +298,7 @@
 
 
           <h3 class="white-text bottom_15">National Geographic</h3>
-          <p class="padbot_30">Graphic Designer<br> Apr 2016 – Apr 2017<br> Washington, DC</p>
+          <p class="padbot_30">Graphic Designer,<br> Apr 2016 – Apr 2017,<br> Washington, DC</p>
 
 
         </div>
@@ -305,7 +306,7 @@
 
 
           <h3 class="white-text bottom_15">Discovery</h3>
-          <p class="padbot_30">Graphic Designer<br> Jan 2015 – Jan 2016<br> Silver Spring, MD</p>
+          <p class="padbot_30">Graphic Designer,<br> Jan 2015 – Jan 2016,<br> Silver Spring, MD</p>
 
 
         </div>
