--- a/index.html
+++ b/index.html
@@ -350,10 +350,11 @@
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-
-          <button class="site-btn" data-tilt> Download Resume
-            <i class="icon ion-md-arrow-down"></i>
-          </button>
+          <a href="/es/CV_Peter Verastegui_Septiembre_(2020).pdf" download>
+            <button class="site-btn" data-tilt> Download Resume
+              <i class="icon ion-md-arrow-down"></i>
+            </button>
+          </a>
 
         </div>
 
